Source/WebKit2/UIProcess/API/APIUIClient.h
@@ -150,8 +150,7 @@ public:
     virtual void pinnedStateDidChange(WebKit::WebPageProxy&) { }
 
     virtual void isPlayingAudioDidChange(WebKit::WebPageProxy&) { }
-    virtual void didBeginCaptureSession() { }
-    virtual void didEndCaptureSession() { }
+    virtual void mediaCaptureStateDidChange(WebCore::MediaProducer::MediaStateFlags) { }
     virtual void handleAutoplayEvent(WebKit::WebPageProxy&, WebCore::AutoplayEvent) { }
 
 #if ENABLE(MEDIA_SESSION)
